<resources>
    <string name="app_name">NutritionMate</string>

    <string name="swipe_learn_more">Swipe to learn more</string>
    <string name="register_button">Register</string>
    <string name="next_button">Next</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="register_info_2">Calories,\nNutrition values\nNo Worries!\n\nNutritionMate calculates it all for you!</string>
    <string name="question_goals">Do you have goals and dietary needs?</string>
    <string name="my_goals">My Goals</string>
    <string name="add_goals">Add Goals</string>
    <string name="goal_1">Eat Healthy</string>
    <string name="goal_2">Special dietary needs</string>
    <string name="goal_3">Lose weight</string>
    <string name="goal_4">Gain weight</string>
    <string name="question_height">How tall are you?</string>
    <string name="input_height">inches</string>
    <string name="question_weight">Your weight?</string>
    <string name="input_weight">pounds</string>
    <string name="question_dob">When is your birthday?</string>
    <string name="input_dob">dd/mm/yyyy</string>
    <string name="question_sex">I am</string>
    <string name="question_active">How active are you?</string>
    <string name="sedentary"><b>Sedentary</b>\nSpend most of the day sitting</string>
    <string name="lightly_active"><b>Lightly Active</b>\nSpending a good part of the day on you feet</string>
    <string name="active"><b>Active</b>\nSpend a good part of the day doing some physical activity</string>
    <string name="very_active"><b>Very Active</b>\nSpend most of the day doing heavy physical activity</string>
    <string name="success_heading">Success!</string>
    <string name="success_message">Successfully Registered!\n\nYour recommended daily net calorie is\n\n %1$d Cal</string>
    <string name="success_start">Let\'s start!</string>

    <string name="dashboard_daily">Daily</string>
    <string name="dashboard_weekly">Weekly</string>
    <string name="dashboard_profile">Profile</string>

    <string name="card_header_text">Regina, You are eating good!</string>
    <string name="calorie_counter_title">Total calorie you had today</string>
    <string name="calorie_counter_content">Burrito Bowl, Chicken Sandwich</string>
    <string name="nutrition_check_title">Nutrition check</string>
    <string name="nutrition_check_content">- Take less sodium food \n- Over 200 cal = Study 1 hour more</string>
    <string name="suggestion_title">Suggestions for later meal</string>
    <string name="nutrition_intake">Intake nutrition values</string>

    <string name="notification_title">NutritionMate</string>
    <string name="notification_content">Hi Honey, \nAre you at Fresh&#38;Co?\nTap for my suggestions.</string>

    <string name="suggestions_page_heading">Suggestions at Fresh&#38;Co</string>
    <string name="menu_heading">Menu</string>
    <string name="cal_heading">Cal</string>
    <string name="price_heading">Price</string>
    <string name="nutrients_heading">Nutrients</string>
    <string name="healthy_mod_example">Healthy Modifications\nBlack beans, No dressing, No flour tortilla, No rice, No cheese, No sour cream</string>
    <string name="include_button">Ok, include in daily history</string>


    <string name="error_height">Please enter a number for your height</string>
    <string name="error_weight">Please enter a number for your weight</string>
    <string name="error_dob">Please choose your date of birth</string>

</resources>



