<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:background="@color/green"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/success_heading"
        />

    <TextView
        android:id="@+id/success_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:text="@string/success_message"
        android:textSize="20dp" />

    <Button
        android:id="@+id/success_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/success_start"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:background="@drawable/button_shape_normal"
        android:textColor="@drawable/button_text_color"/>


</LinearLayout>
