<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/green">
        <ImageButton
            android:id="@+id/exit_suggestion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/next_left"
            android:scaleType="fitCenter"
            android:background="@color/green" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/suggestions_page_heading" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:paddingLeft="20dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/menu_suggestion_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/menu_suggestion_ingredients"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:text="@string/nutrients_heading"/>

    <LinearLayout
        android:id="@+id/nutrient_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <include
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            layout="@layout/nutrient_row" />
        <include
            android:id="@+id/nutrient_sodium"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            layout="@layout/nutrient_row" />
        <include
            android:id="@+id/nutrient_carb"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            layout="@layout/nutrient_row" />
        <include
            android:id="@+id/nutrient_protein"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            layout="@layout/nutrient_row" />
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="17sp"
        android:text="@string/healthy_mod_example"
        android:layout_weight="2" />
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/include_button"
        android:textColor="@color/white"
        android:background="@drawable/button_shape_normal"/>
        />

</LinearLayout>